--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -31,7 +31,7 @@
                     tr
                       td = user.id
                       td = user.email
-                      td = user.salutation
+                      td = user.salutation_text
                       td = user.first_name
                       td = user.last_name
                       td = user.job_title
