--- a/app/views/home/_statistics.html.slim
+++ b/app/views/home/_statistics.html.slim
@@ -4,19 +4,15 @@
       .col-md-12
         .number-counter
           .row
-            .col-md-3.col-xs-12
+            .col-md-4.col-xs-12
               .number-counter__item
-                h2 1800+
-                p Trusted Clients
-            .col-md-3.col-xs-12
+                h2 50+
+                p = t('home_page.statistics.trusted_clients')
+            .col-md-4.col-xs-12
               .number-counter__item
-                h2 $5.000.000
-                p Recoverd For Our Clients
-            .col-md-3.col-xs-12
+                h2 2.000.000.000+ VNĐ
+                p = t('home_page.statistics.recovered_for_our_clients')
+            .col-md-4.col-xs-12
               .number-counter__item
                 h2 98%
-                p Successfull Cases
-            .col-md-3.col-xs-12
-              .number-counter__item
-                h2 1520+
-                p Cases Closed
+                p = t('home_page.statistics.successful_cases')
