--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -17,7 +17,7 @@
 
         .widget.social-links
           = link_to 'VN', change_locale_path(:vn), class: 'social-icon'
-          = link_to 'EN', change_locale_path(:en), class: 'social-icon'
+          / = link_to 'EN', change_locale_path(:en), class: 'social-icon'
 
   .container
     .header
