--- a/app/views/admin/layouts/main.html.slim
+++ b/app/views/admin/layouts/main.html.slim
@@ -53,6 +53,16 @@ html lang="en"
                 = link_to t('admin.menu.contacts'), admin_contacts_path
 
       #page-wrapper
+        .row
+          .col-lg-12
+            - flash.each do |name, msg|
+              = content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do
+                button.close type="button" data-dismiss="alert"
+                  span aria-hidden="true"
+                    | &times;
+                  span.sr-only
+                    | Close
+                = msg
         = yield
 
     = javascript_initialization
