--- a/app/views/home/_introduction.html.slim
+++ b/app/views/home/_introduction.html.slim
@@ -9,4 +9,4 @@
                 = link_to (image_tag service.picture.url(:thumb), class: 'img-responsive'), service
                 .content
                   h5.title = link_to service.title, service
-                  p == service.content.truncate(200)
+                  p = service.short_description
