Add user picture to form

--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -3,6 +3,7 @@
   = f.input :salutation
   = f.input :first_name
   = f.input :last_name
+  = f.input :picture
   = f.input :job_title
   = f.input :role
   = f.input :password
