--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -19,6 +19,7 @@
                     th = t('user.salutation')
                     th = t('user.first_name')
                     th = t('user.last_name')
+                    th = t('user.picture')
                     th = t('user.job_title')
                     th = t('user.role')
                     th = t('user.sign_in_count')
@@ -34,6 +35,7 @@
                       td = user.salutation_text
                       td = user.first_name
                       td = user.last_name
+                      td = image_tag user.picture.url(:medium), class: 'img-responsive'
                       td = user.job_title
                       td = user.role_text
                       td = user.sign_in_count
