--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -5,6 +5,10 @@
   = f.input :last_name
   = f.input :picture
   = f.input :job_title
+  = f.input :description
+  = f.input :facebook_url
+  = f.input :twitter_url
+  = f.input :linkedin_url
   = f.input :role
   = f.input :password
   = f.input :password_confirmation
