--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -8,18 +8,18 @@ $nobel: #999;
 $lighter-nobel: #989898;
 $gainsboro: #e0e0e0;
 $darker-gainsboro: #e6e6e6;
-$tan: #ccb68d;
+$tan: #bdc3c7;
 $darker-tan: #c9b38a;
 $light-grey: #b2b1b5;
 $grey: #777;
 $light-grape: #595463;
-$grape: #45414d;
-$brown: #45423d;
+$grape: #2980b9;
+$brown: #34495e;
 $dark-grape: #393640;
-$putty: #c3a878;
+$putty: #7f8c8d;
 $lightest-putty: #bc9f6a;
-$darkder-putty: #a69067;
-$pavlova: #bfa980;
+$darkder-putty: #2c3e50;
+$pavlova: #7f8c8d;
 $lighter-yellow: #b99b63;
 $darker-yellow: #b19051;
 $more-darker-brown: #967943;
