--- a/app/assets/stylesheets/home/_new.scss
+++ b/app/assets/stylesheets/home/_new.scss
@@ -4,7 +4,7 @@
   }
 
   .latest-new__date {
-    background-color: $tan;
+    background-color: $grape;
     color: $white;
     font-weight: bold;
     padding: 2px 10px;
