--- a/app/assets/stylesheets/layout/posts.scss
+++ b/app/assets/stylesheets/layout/posts.scss
@@ -27,7 +27,7 @@
   .search-submit {
     width: 100%;
     height: 60px;
-    background-color: #ccb68d;
+    background-color: $grape;
     font-family: "Alegreya", Georgia, "Times New Roman", Times, serif;
     text-transform: uppercase;
     border: 0;
