--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -57,7 +57,7 @@
   }
 
   .more-link {
-    color: #ccb68d;
+    color: $grape;
     position: relative;
     text-transform: uppercase;
     font-weight: bold;
