--- a/app/views/home/_clients.html.slim
+++ b/app/views/home/_clients.html.slim
@@ -10,20 +10,28 @@
       .col-md-12
         .row
           .clients
-            .col-xs-6.col-md-3
+            .col-xs-6.col-md-2
               .client
                 = image_tag 'clients/ltnh.png'
 
-            .col-xs-6.col-md-3
+            .col-xs-6.col-md-2
               .client
                 = image_tag 'clients/mvs.png'
 
-            .col-xs-6.col-md-3
+            .col-xs-6.col-md-2
               .client
                 = image_tag 'clients/nstl.png'
 
-            .col-xs-6.col-md-3
+            .col-xs-6.col-md-2
               .client
                 = image_tag 'clients/sasteco.png'
+
+            .col-xs-6.col-md-2
+              .client
+                = image_tag 'clients/csg2.png'
+
+            .col-xs-6.col-md-2
+              .client
+                = image_tag 'clients/tl.png'
 
             .clearfix
