--- a/app/views/home/_internship.html.slim
+++ b/app/views/home/_internship.html.slim
@@ -5,5 +5,5 @@
         .title = t('home_page.internship.title')
         .subtitle = t('home_page.internship.subtitle')
       .buttons
-        = link_to t('home_page.contact'), new_contact_path, class: 'btn btn-raised btn-primary btn-apply-now'
+        = link_to t('home_page.contact'), new_contact_path, class: 'btn btn-raised btn-default'
         = link_to t('home_page.read_more'), '#', class: 'btn btn-raised btn-default'
