--- a/app/views/home/_our_services.html.slim
+++ b/app/views/home/_our_services.html.slim
@@ -1,6 +1,6 @@
 .home-our-services-container
   .container
-    - @minor_services.each_slice(3) do |services|
+    - @services.each_slice(3) do |services|
       .row
         - services.each do |service|
           .col-md-4
