--- a/app/views/home/_slider.html.slim
+++ b/app/views/home/_slider.html.slim
@@ -1,34 +1,34 @@
 .home-slider-container
   .slider.slick-slider
-    .item
-      = image_tag 'sliders/pic1.jpg'
-      .container
-        .content
-          .headline Khang Hai & Partners
-          .title
-            h1 5 năm kinh nghiệm làm việc trong lĩnh vực pháp lý
-          .description
-            p
-              | Chúng tôi luôn mong muốn đem lại sự hợp tác tốt nhất và cùng chia sẻ thành công cũng như kinh nghiệm đến với khách hàng.
-            p
-              = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
-              | &nbsp;
-              = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
+    / .item
+    /   = image_tag 'sliders/pic1.jpg'
+    /   .container
+    /     .content
+    /       .headline Khang Hai & Partners
+    /       .title
+    /         h1 5 năm kinh nghiệm làm việc trong lĩnh vực pháp lý
+    /       .description
+    /         p
+    /           | Chúng tôi luôn mong muốn đem lại sự hợp tác tốt nhất và cùng chia sẻ thành công cũng như kinh nghiệm đến với khách hàng.
+    /         p
+    /           = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
+    /           | &nbsp;
+    /           = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
 
     .item
       = image_tag 'sliders/pic4.png'
-      .container
-        .content
-          .headline Khang Hai & Partners
-          .title
-            h1 Hãy yên tâm trao niềm tin của bạn nơi chúng tôi
-          .description
-            p
-              | Với đội ngũ nhân sự dồi dào kinh nghiệm và tâm huyết với nghề. Yêu cầu của khách hàng sẽ luôn được đáp ứng một cách tốt nhất
-            p
-              = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
-              | &nbsp;
-              = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
+      / .container
+      /   .content
+      /     .headline Khang Hai & Partners
+      /     .title
+      /       h1 Hãy yên tâm trao niềm tin của bạn nơi chúng tôi
+      /     .description
+      /       p
+      /         | Với đội ngũ nhân sự dồi dào kinh nghiệm và tâm huyết với nghề. Yêu cầu của khách hàng sẽ luôn được đáp ứng một cách tốt nhất
+      /       p
+      /         = link_to 'Liên hệ', contact_us_path, class: 'btn btn-raised btn-primary'
+      /         | &nbsp;
+      /         = link_to 'Dịch vụ', services_path, class: 'btn btn-raised btn-default'
 
 coffee:
   $('.slider').slick
