--- a/app/assets/stylesheets/home/_our_pathway.scss
+++ b/app/assets/stylesheets/home/_our_pathway.scss
@@ -29,7 +29,7 @@
     position: relative;
 
     &:after {
-      color: #ccb68d;
+      color: $grape;
       content: '\f02e';
       font-family: FontAwesome;
       font-size: 18px;
