--- a/app/assets/stylesheets/shared/_employee.scss
+++ b/app/assets/stylesheets/shared/_employee.scss
@@ -15,7 +15,7 @@
   }
 
   .person-profile__tag {
-    background-color: #ccb68d;
+    background-color: $grape;
     color: $white;
     font-weight: bold;
     padding: 2px 10px;
