--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,6 @@
 #home-index-container
   = render 'slider'
-  = render 'introduction'
+  // = render 'introduction'
   = render 'our_services'
   = render 'internship'
   = render 'team'
@@ -11,4 +11,4 @@
                                             center_lat: 10.8809411,
                                             center_lng: 106.5936243,
                                             zoom: 14 }
-  = render 'statistics'
+  / = render 'statistics'
