--- a/app/views/admin/categories/show.html.slim
+++ b/app/views/admin/categories/show.html.slim
@@ -16,6 +16,9 @@
                 th = t('category.name')
                 td = @category.name
               tr
+                th = t('category.type')
+                td = @category.type
+              tr
                 th = t('shared.created_at')
                 td = format_datetime(@category.created_at)
               tr
