--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1,6 +1,6 @@
 body {
   background-color: $white;
-  color: $nobel;
+  color: $darkder-putty;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -114,7 +114,7 @@ p {
   margin-bottom: 50px;
 
   .widget-title {
-    font-size: 27px;
+    font-size: 24px;
     font-weight: 600;
     line-height: 1.2;
     margin-bottom: 0;
@@ -127,12 +127,12 @@ p {
     position: absolute;
     right: 0;
     top: 50%;
-    left: 221px;
+    left: 150px;
   }
 
   @media (min-width: 992px) {
     .widget-title {
-      font-size: 46px;
+      font-size: 36px;
     }
   }
 }
