--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,3 +1,4 @@
-= simple_form_for [:admin, @category], wrapper: :vertical_form do |f|
+= simple_form_for [:admin, @category.becomes(Category)], wrapper: :vertical_form do |f|
   = f.input :name
+  = f.input :type, as: :select
   = f.submit t('shared.submit'), class: 'btn btn-default'
