--- a/app/views/admin/layouts/main.html.slim
+++ b/app/views/admin/layouts/main.html.slim
@@ -46,6 +46,8 @@ html lang="en"
               li
                 = link_to t('admin.menu.posts'), admin_posts_path
               li
+                = link_to t('admin.menu.forms'), admin_forms_path
+              li
                 = link_to t('admin.menu.users'), admin_users_path
               li
                 = link_to t('admin.menu.categories'), admin_categories_path
