--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,14 +1,10 @@
 #home-index-container
   = render 'slider'
-  // = render 'introduction'
   = render 'our_services'
-  = render 'internship'
-  = render 'team'
-  = render 'our_pathway'
   = render 'news'
+  = render 'forms'
   = render 'clients'
   = render partial: 'shared/map', locals: { markers: [{lat: 10.8809411, lng: 106.5936243, description: 'Khang Hai Lawfirm'}].to_json,
                                             center_lat: 10.8809411,
                                             center_lng: 106.5936243,
                                             zoom: 14 }
-  / = render 'statistics'
