--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,7 +2,7 @@
   = render 'slider'
   = render 'our_services'
   = render 'news'
-  = render 'forms'
+  = render 'forms' if @forms.any?
   = render 'clients'
   = render partial: 'shared/map', locals: { markers: [{lat: 10.8809411, lng: 106.5936243, description: 'Khang Hai Lawfirm'}].to_json,
                                             center_lat: 10.8809411,
