Add style for Form

--- a/app/assets/stylesheets/home/_our_services.scss
+++ b/app/assets/stylesheets/home/_our_services.scss
@@ -13,7 +13,7 @@
     width: 100%;
 
     .fa {
-      background-color: $tan;
+      background-color: $grape;
       color: $white;
       float: left;
       font-size: 20px;
