--- a/app/assets/stylesheets/posts/index.scss
+++ b/app/assets/stylesheets/posts/index.scss
@@ -1,4 +1,4 @@
-#posts-index-container {
+#posts-index-container, #forms-index-container {
   .pagination-wrapper {
     display: flex;
     justify-content: center;
