--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -8,11 +8,12 @@ body {
 }
 
 a {
-  color: #000;
+  color: $grape;
   text-decoration: none;
 
   &:hover {
-    color: #000;
+    color: $darkder-putty;
+    text-decoration: none;
   }
 }
 
@@ -87,6 +88,23 @@ h6 {
 
 p {
   margin: 0 0 10.5px;
+}
+
+input[type=text], input[type=email], input[type=tel], textarea {
+  background-color: #f7f7f7;
+  border-radius: 2px;
+  border: 1px solid #eee;
+  box-shadow: none;
+  width: 100%;
+  padding: 17.5px 20px;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #999;
+  transition: all 100ms ease-out;
+
+  &:focus {
+    background-color: #fff;
+  }
 }
 
 .widget {
