--- a/app/views/forms/index.html.slim
+++ b/app/views/forms/index.html.slim
@@ -1,5 +1,5 @@
-- provide(:main_title_primary, 'Tin tức pháp luật')
-- provide(:main_title_secondary, 'Những tin tức và câu chuyện pháp luật được trải nghiệm bởi chính đội ngũ luật sư chúng tôi')
+- provide(:main_title_primary, 'Biểu mẫu')
+- provide(:main_title_secondary, 'Tải về những biểu mẫu pháp luật mới nhất')
 - breadcrumb :forms
 
 #forms-index-container
