--- a/app/views/forms/show.html.slim
+++ b/app/views/forms/show.html.slim
@@ -1,5 +1,5 @@
 - provide(:main_title_primary, 'Biểu mẫu')
-- provide(:main_title_secondary, 'What we do and what can you expect from us')
+- provide(:main_title_secondary, 'Tải về những biểu mẫu pháp luật mới nhất')
 - breadcrumb :form, @form
 
 #forms-show-container
