--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,5 +1,5 @@
-- provide(:main_title_primary, 'Legal News')
-- provide(:main_title_secondary, 'What we do and what can you expect from us')
+- provide(:main_title_primary, 'Tin tức pháp luật')
+- provide(:main_title_secondary, 'Những tin tức và câu chuyện pháp luật được trải nghiệm bởi chính đội ngũ luật sư chúng tôi')
 - breadcrumb :post, @post
 
 #posts-show-container
