--- a/app/assets/stylesheets/posts/_post.scss
+++ b/app/assets/stylesheets/posts/_post.scss
@@ -1,4 +1,4 @@
-.posts-post-container {
+.posts-post-container, .forms-form-container {
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 60px;
 
@@ -29,7 +29,7 @@
   }
 
   .title {
-    font-size: 36px;
+    font-size: 24px;
     padding: 0 40px;
     margin-bottom: 19px;
 
@@ -47,8 +47,6 @@
 
     p {
       margin-bottom: 18px;
-      font-size: 16px;
-      line-height: 1.625;
 
       &:last-of-type {
         margin-bottom: 0;
