--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -1,4 +1,4 @@
-#posts-show-container {
+#posts-show-container, #forms-show-container {
   article {
     margin-bottom: 60px;
   }
@@ -30,7 +30,7 @@
   }
 
   .title {
-    font-size: 36px;
+    font-size: 24px;
     padding: 0;
     margin-bottom: 19px;
 
@@ -48,8 +48,6 @@
 
     p {
       margin-bottom: 18px;
-      font-size: 16px;
-      line-height: 1.625;
 
       &:last-of-type {
         margin-bottom: 0;
