Add Customer#phone_number to admin/customer/show

--- a/app/views/admin/customers/show.html.slim
+++ b/app/views/admin/customers/show.html.slim
@@ -16,6 +16,9 @@
                 th = t('customer.birthday')
                 td = @customer.birthday
               tr
+                th = t('customer.phone_number')
+                td = @customer.phone_number
+              tr
                 th = t('customer.permanent_address')
                 td = @customer.permanent_address
               tr
